<resources>
    <string name="app_name">PTTravel</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="themdulich">Thêm Địa Điểm DL</string>
    <string name="themlehoi">Thêm Địa Điểm LH</string>
    <string name="thaydoitt">Thay Đổi Thông Tin</string>
    <string name="Album">Abbum</string>
    <string name="Anh">Anh</string>
    <string-array name="theloai">
        <item>Ưu Đãi</item>
        <item>Tự Do</item>
        <item>Bán Vé</item>
        <item>Bảo Tàng</item>
        <item>Di Tích</item>
        <item>Công Viên</item>
        <item>Thám Hiểm</item>
        <item>Tất Cả</item>
    </string-array>
    <string-array name="maps_type">
        <item>MAP_TYPE_NONE</item>
        <item>MAP_TYPE_NORMAL</item>
        <item>MAP_TYPE_SATELLITE</item>
        <item>MAP_TYPE_HYBRID</item>
        <item>MAP_TYPE_TERRAIN</item>
    </string-array>
    <string-array name="KhuVuc">
        <item>ĐB Sông Cửu Long</item>
        <item>Đông Nam Bộ</item>
        <item>Tây Nguyên</item>
        <item>Bắc Trung Bộ</item>
        <item>Ven Biển Miền Trung</item>
        <item>ĐB Sông Hồng</item>
        <item>Vùng Núi Phía Bắc</item>
    </string-array>
    <string name="title_activity_maps">Map</string>

    <!--menu cua album-->
    <string name="add">Thêm</string>
    <string name="edit">Sửa</string>
    <string name="upload">Đăng ảnh</string>
    <string name="delete">Xóa</string>

    <!--menu cua schedule-->
    <string name="action_today">Hôm nay</string>
    <string name="action_day_view">Theo ngày</string>
    <string name="action_three_day_view">Theo 3 ngày</string>
    <string name="action_week_view">Theo Tuần</string>
    <string name="title_activity_basic">Basic Example</string>
    <string name="title_activity_asynchronous">Asynchronous Events</string>
    <string name="async_error">Could not download events from the internet</string>

    <!--add event of schedule-->
    <string name="action_add">Thêm sự kiện</string>
    <string name="action_edit">Sửa sự kiện</string>
    <string name="form_button_add">Thêm</string>
    <string name="form_button_cancel">Hủy</string>
    <string name="date_bd">Bắt đầu :</string>
    <string name="date_kt">Kết thúc :</string>
    <string name="temptext">text</string>
    <string name="form_button_ok">OK</string>
    <string name="title">Title</string>
    <string name="detail">Detail</string>
    <string name="event_date">Event Date</string>

    <string name="notifications">Thông báo của bạn</string>

    <string name="title_activity_festival_detail">PTTravel</string>

    <string name="manager_user">Danh sách User</string>
    <string name="manager_quyen">Quyền</string>
    <string name="login">Đăng Nhập</string>
    <string name="logout">Đăng Xuất</string>
    <string name="home">Trang Chủ</string>
    <string name="schedule">Lịch Trình</string>
    <string name="back">Quay Lại</string>

</resources>

