<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/txt_AddEvent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_add"
        android:textSize="16sp"
        android:layout_margin="5dp"
        android:gravity="center"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="#cccccc">

        <EditText
            android:id="@+id/scheduleEventTilte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:textSize="16sp"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="#cccccc">

        <EditText
            android:id="@+id/scheduleEventDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/detail"
            android:textSize="16sp"/>

    </android.support.design.widget.TextInputLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/event_date"
        android:textSize="16sp"
        android:layout_margin="5dp"
        android:padding="3dp"/>

    <LinearLayout
        android:id="@+id/eventLayoutBD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:text="@string/date_bd"
            android:padding="3dp"/>

        <TextView
            android:id="@+id/txt_eventBD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:padding="3dp"
            android:text="@string/temptext"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/eventLayoutKT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:text="@string/date_kt"
            android:padding="3dp"/>

        <TextView
            android:id="@+id/txt_eventKT"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            android:padding="3dp"
            android:text="@string/temptext"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <Button
            android:id="@+id/btnEventCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/form_button_cancel"/>

        <Button
            android:id="@+id/btnEventAdd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/form_button_add"/>

    </LinearLayout>

</LinearLayout>